--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "mactkg <mactkg@gmail.com> (http://makerbox.net/)",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "gulp": "^3.9.0",
     "gulp-uglify": "^1.4.1",
@@ -17,5 +19,8 @@
     "gulp-webserver": "^0.9.1",
     "ngrok": "^2.1.6",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "jquery": "^2.2.2"
   }
 }
