--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scratchx-template",
+  "name": "scratchi",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "mactkg <mactkg@gmail.com> (http://makerbox.net/)",
-  "license": "ISC",
+  "author": "Tim Garner <tigarner@cisco.com",
+  "license": "MIT",
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
